sfdx_project/force-app/main/default/objects/Git_Commit_Item__c/Git_Commit_Item__c.object-meta.xml
<CustomObject>
    <label>Git Commit Item</label>
    <nameField>
        <displayFormat>GCI-{000000}</displayFormat>
        <label>Git Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Commit Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>