sfdx_project/force-app/main/default/objects/Git_Commit_Item__c/fields/Git_Commit__c.field-meta.xml
<CustomField>
    <fullName>Git_Commit__c</fullName>
    <label>Git Commit</label>
    <referenceTo>Git_Commit__c</referenceTo>
    <relationshipLabel>Git Commit Item</relationshipLabel>
    <relationshipName>Git_Commit_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>