sfdx_project/force-app/main/default/objects/Git_Commit_Item__c/fields/Git_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Git_Subscription__c</fullName>
    <label>Git Subscription</label>
    <referenceTo>Git_Subscription__c</referenceTo>
    <relationshipLabel>Git Commit Item</relationshipLabel>
    <relationshipName>Git_Commit_Item</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>