sfdx_project/force-app/main/default/objects/Git_Commit_Item__c/fields/Git_Tree_State__c.field-meta.xml
<CustomField>
    <fullName>Git_Tree_State__c</fullName>
    <label>Git Tree State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>