sfdx_project/force-app/main/default/objects/Git_Commit_Item__c/fields/Retrieve_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Request_Id__c</fullName>
    <label>Retrieve Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>